# robot

./: .gitignore  README.md
config/params/: planner_params.yaml
config/rviz/: sweeper.rviz
scripts/: run_experiment.py
simulation/launch/: sim.launch.py
simulation/models/sweeper_robot/: robot.urdf
simulation/worlds/: empty_room.world  room_with_obstacles.world
src/coverage_planner/: package.xml  setup.py
src/coverage_planner/coverage_planner/: __init__.py  coverage_planner_node.py
src/coverage_planner/coverage_planner/algorithms/: __init__.py  boustrophedon.py  spiral.py
src/map_tools/: package.xml  setup.cfg  setup.py
src/map_tools/map_tools/: __init__.py  grid_map.py
src/obstacle_avoidance/: package.xml  setup.py
src/obstacle_avoidance/obstacle_avoidance/: __init__.py  obstacle_avoidance_node.py  vfh.py
src/path_tracker/: package.xml  setup.py
src/path_tracker/path_tracker/: __init__.py  path_tracker_node.py  pure_pursuit.py
src/state_estimator/: package.xml  setup.cfg  setup.py
src/state_estimator/state_estimator/: __init__.py  kinematics.py  state_estimator_node.py
src/velocity_manager/: CMakeLists.txt  package.xml
src/velocity_manager/src/: velocity_manager_node.cpp
test/: test_coverage_planner.py  test_grid_map.py  test_kinematics.py  test_obstacle_avoidance.py  test_path_tracker.py
