<?xml version="1.0"?>
<package format="3">
  <name>coverage_planner</name>
  <version>0.0.1</version>
  <description>Coverage path planner for a ROS2 cleaning robot project.</description>

  <maintainer email="guxueqiao@gmail.com">lincoln-gxq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>